# polymarket-arb-lab

./: .gitignore  Makefile  README.md  pyproject.toml  read_events.py  repomix.config.json
data/fixtures/: active_markets.json  sample_fixture.json  sample_market.json
experiments/: client.py  test_edge.py  test_parse_data.py  test_storage_retry.py  test_tracker.py  tracker.py
http-requests/: clob.http  gamma.http
scripts/: read_events.py
src/pmkt/: cli.py
src/pmkt/adapters/: storage_csv.py
src/pmkt/clob/: client.py  models.py  paired.py  paired_recorder.py
src/pmkt/domain/: entities.py  ports.py
src/pmkt/gamma/: client.py  normalize.py
src/pmkt_arb_lab/: __init__.py  cli.py  logic.py  models.py
src/polymarket_arb_lab/: cli.py  client.py  config.py  logic.py  models.py  report.py  scanner.py  storage.py  utils.py
tests/: test_edge.py  test_fee_model.py  test_models.py  test_selection.py  test_storage_retry.py  test_tracker.py  test_vwap.py
tests/features/: market_lifecycle.feature  test_market_lifecycle.py
tests/pmkt/: test_export_selection.py
tests/pmkt/adapters/: test_storage_csv.py
tests/pmkt/cli/: test_export.py
tests/pmkt/clob/: test_models.py  test_pair_mapping.py  test_paired.py  test_paired_recorder.py
tests/pmkt/gamma/: test_normalize.py
tests/pmkt_arb_lab/: test_fee_model.py  test_models.py  test_selection.py  test_vwap.py
