[project]
name = "pmkt-arb-lab"
version = "0.1.0"
description = "Polymarket Binary Arb Explorer (read-only research)"
requires-python = ">=3.11"
readme = "README.md"
license = { text = "MIT" }
authors = [
  { name = "Codex" }
]
dependencies = [
  "httpx>=0.27",
  "pandas>=2.3.3",
  "pandas-stubs~=2.3.3",
  "pydantic>=2.7",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "ruff>=0.5",
]

[project.scripts]
pmarb = "pmkt_arb_lab.cli:main"

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.pytest.ini_options]
addopts = "-q"
testpaths = ["tests"]

[tool.uv]
package = true
